--- a/assets/sass/sections/about.scss
+++ b/assets/sass/sections/about.scss
@@ -47,6 +47,12 @@ section#about {
 					padding-left: 0;
 				}
 			}
+			ul {
+				margin-top: 0;
+				li {
+					margin-bottom: 0;
+				}
+			}
 		}
 		h3.title {
 			text-align: left;
